cmake_minimum_required(VERSION 2.7)
set(MYSQL_INC_DIR "/usr/include/mysql")
set(MYSQL_PLUGIN_DIR "/usr/lib/mysql/plugin/")
include_directories(${MYSQL_INC_DIR})
set(UDFS earth_distance write_to_file hello word_count)
foreach (UDF ${UDFS})
	add_library(${UDF} MODULE "${UDF}.cc")
endforeach()

install(TARGETS ${UDFS} DESTINATION ${MYSQL_PLUGIN_DIR})
